@@ -1,5 +1,14 @@
 body .nirvana_exception {
   color: red;
+  display: block;
+  width: 95%;
+  margin: 0.3em auto;
+  max-height: 120px;
+  overflow: auto;
+  border-radius: 0.5em;
+  font-size: smaller;
+  background: #ddd;
+  padding: 0.8em;
 }
 body .nirvana_warning {
   color: #ffcc00;
