@@ -33,7 +33,14 @@ module Termvana
       [stdout, stderr, result]
     end
 
-    def format_output(response)
+    def format_output(response, code = false)
+      if code && response.is_a?(Array)
+        new_response = ""
+        response.each do |line|
+          new_response << "\n"
+        end
+        response = "<code><pre>"+EscapeUtils.escape_html(new_response)+"</pre></code>"
+      end
       EscapeUtils.escape_html(response).gsub("\n", "<br>").gsub("\t", "    ").gsub(" ", "&nbsp;")
     end
   end
